# TermGPT

./: TermGPT.py  pyproject.toml
