[tool.poetry]
name = "termgpt"
version = "0.1.0"
description = ""
authors = ["qudsiramiz <qudsiramiz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.8"
colorama = "^0.4.6"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
